--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div id="grid" class="grid"></div>
       </div>
       <footer>
-        Data: Analytics API and Assets API. Docs: <a href="https://assets.deadlock-api.com/scalar" target="_blank" rel="noreferrer">Scalar</a>
+               Data:  <a href="https://deadlock-api.com/" target="_blank" rel="noreferrer">Deadlock API</a>
       </footer>
     </div>
 
@@ -274,5 +274,6 @@
     </script>
   </body>
   </html>
+
 
 
